setup/k8s/infra/03-apps/02-speedtest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: infra
  labels:
    app: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: openspeedtest/latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: infra
spec:
  selector:
    app: speedtest
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-lan
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`speedtest.infra.lan`) || Host(`speedtest.media.lan`) || Host(`speedtest.infra.${WAN_HOSTNAME}`) || Host(`speedtest.media.${WAN_HOSTNAME}`) || Host(`speedtest.${WAN_HOSTNAME}`) || Host(`speedtest-service`)
      kind: Rule
      services:
        - name: speedtest
          port: 3000
  tls:
    secretName: media-lan-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-wan
  namespace: infra
spec:
  entryPoints:
    - web-wan
    - websecure-wan
  routes:
    - match: Host(`speedtest.infra.${WAN_HOSTNAME}`) || Host(`speedtest.media.${WAN_HOSTNAME}`) || Host(`speedtest.${WAN_HOSTNAME}`)
      kind: Rule
      services:
        - name: speedtest
          port: 3000
  tls:
    secretName: wan-wildcard-tls
