setup/k8s/infra/03-apps/04-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: infra
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gateway
  namespace: infra
subsets:
  - addresses:
      - ip: 192.168.2.254
    ports:
      - port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gateway-host-header
  namespace: infra
spec:
  headers:
    customRequestHeaders:
      Host: "192.168.2.254"
      Origin: "http://192.168.2.254"
      Referer: "http://192.168.2.254/"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gateway-lan
  namespace: infra
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gateway.infra.lan`) || Host(`gateway.infra.${WAN_HOSTNAME}`)
      kind: Rule
      middlewares:
        - name: gateway-host-header
      services:
        - name: gateway
          port: 80
  tls:
    secretName: media-lan-tls
